Add cluster.columnar.enabled cluster setting and enable it in a number of tests to randomize between logsdb and columnar_logsdb.
For a lot of tests it doesn't matter for the assertions whether logsdb or logsdb_columnar is used. This allows us to randomly pick between logsdb and logsdb_columnar.